--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">DailySelfie</string>
 
     <!-- Main Activity actions -->
-    <string name="action_settings">Settings</string>
     <string name="action_take_photo">Take Photo</string>
+    <string name="action_select_all">Select All</string>
+    <string name="action_deselect_all">Deselect All</string>
+    <string name="action_remove_selected">Remove Selected</string>
+
 </resources>
